syntax = "proto3";

package v1;

option go_package = "/network/proto";

service Discovery {
    rpc FindPeers(FindPeersReq) returns (FindPeersResp);
}

message PeerInfo {
    string from = 1;
    repeated string nodes = 2;
}

message FindPeersReq {
    string key = 1;
    int64 count = 2;
}

message FindPeersResp {
    repeated string nodes = 1; 
}
